--- a/_includes/callouts.html
+++ b/_includes/callouts.html
@@ -1,13 +1,13 @@
 {% if page.callouts %}
     {% assign callouts=site.data.[page.callouts] %}
-    <section class="hero {% if callouts.height %} {{ callouts.height }} {% else %} is-medium {% endif %} {{ callouts.style }}">
+    <section class="hero {% if callouts.height %} {{ callouts.height }} {% else %} is-small {% endif %} {{ callouts.style }}">
         <div class="hero-body">
             <div class="container">
                 <div class="columns is-multiline is-centered">
                     {% for callout in callouts.items %}
                         <div class="column is-4 has-text-centered">
                             {% if callout.icon %}
-                            <div class="icon callout-icon">
+                            <div class="icon callout-icon is-success">
                             {% if callout.icon_brand %}
                                 <i class="fab {{ callout.icon }} fa-4x"></i>
                             {% else %}
