--- a/_layouts/skill-sprint-category.html
+++ b/_layouts/skill-sprint-category.html
@@ -21,7 +21,7 @@ layout: default
                     </div>
 
                     <div class="card-content">
-                        <a href="/skill-sprint{{ skill-sprint.url | datapage_url: url }}" class="button is-success is-medium is-fullwidth">{{ skill-sprint.name }}</a>
+                        <a href="/skill-sprint{{ skill-sprint.url | datapage_url: url }}" class="button is-success is-light is-medium is-fullwidth">{{ skill-sprint.name }}</a>
                         </br>
                         <p class="bd-notification is-primary">{{ skill-sprint.scenario }} <b><a href="/skill-sprint{{ skill-sprint.url | datapage_url: url }}">more info</a></b></p>
                         </br>
